--- a/TEXTO/atividades-parte-b.tex
+++ b/TEXTO/atividades-parte-b.tex
@@ -16,9 +16,9 @@ A Figura \ref{fig:comunicacao_jsi} ilustra o processo de criação de um compone
 
 \begin{figure}[h!]
     \centering
-    % \includegraphics[width=\textwidth]{figura1.png} % Placeholder para a imagem
     \caption{Comunicação JSI entre React-native e Nativo.}
-    \label{fig:comunicacao_jsi}
+    \label{fig:com_async}
+    \includegraphics[width=\textwidth]{IMAGENS/comunicao-async-rn.png} % Placeholder para a imagem
     \source{Fonte: Do próprio autor.}
 \end{figure}
 
