feat: new concepts

--- a/TEXTO/TEXTO-Bibliografia.bib
+++ b/TEXTO/TEXTO-Bibliografia.bib
@@ -1,37 +1,84 @@
-@misc{scrum,
+@manual{scrum,
   title  = {The Scrum Guide},
   author = {Schwaber, Ken and Sutherland, Jeff},
-  year   = {2020}
+  year   = {2020},
+  url    = {https://scrumguides.org/},
+  note   = {Acessado em: 26 nov. 2025}
 }
 
 @book{pressman,
   title     = {Software Engineering: A Practitioner's Approach},
   author    = {Pressman, Roger S. and Maxim, Bruce R.},
   year      = {2019},
+  edition   = {9},
   publisher = {McGraw-Hill Education}
 }
 
-@misc{agile,
-  title        = {Manifesto Ágil},
-  howpublished = {\url{https://agilemanifesto.org/}},
-  note         = {Acessado em: 2024}
+@manual{agile,
+  title  = {Manifesto for Agile Software Development},
+  author = {{Agile Alliance}},
+  year   = {2001},
+  url    = {https://agilemanifesto.org/},
+  note   = {Acessado em: 26 nov. 2025}
 }
 
 @book{microservices,
-  title     = {Building Microservices},
+  title     = {Building Microservices: Designing Fine-Grained Systems},
   author    = {Newman, Sam},
-  year      = {2015},
+  year      = {2021},
+  edition   = {2},
   publisher = {O'Reilly Media}
 }
 
 @book{cleanarch,
-  title  = {Design Principles and Design Patterns},
-  author = {Martin, Robert C.},
-  year   = {2000}
+  title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
+  author    = {Martin, Robert C.},
+  year      = {2017},
+  publisher = {Prentice Hall}
 }
 
 @misc{designsystem,
   title  = {O Pulso - Design System},
   author = {{RD Saúde}},
   note   = {Documentação interna}
+}
+
+@manual{reactnative,
+  title  = {React Native Documentation},
+  author = {{Meta Platforms, Inc.}},
+  year   = {2024},
+  url    = {https://reactnative.dev/},
+  note   = {Acessado em: 26 nov. 2025}
+}
+
+@manual{nodejs,
+  title  = {Node.js Documentation},
+  author = {{OpenJS Foundation}},
+  year   = {2024},
+  url    = {https://nodejs.org/},
+  note   = {Acessado em: 26 nov. 2025}
+}
+
+@manual{nextjs,
+  title  = {Next.js Documentation},
+  author = {{Vercel}},
+  year   = {2024},
+  url    = {https://nextjs.org/},
+  note   = {Acessado em: 26 nov. 2025}
+}
+
+@manual{react,
+  title  = {React Documentation},
+  author = {{Meta Platforms, Inc.}},
+  year   = {2024},
+  url    = {https://react.dev/},
+  note   = {Acessado em: 26 nov. 2025}
+}
+
+@manual{typescript,
+  title  = {TypeScript Documentation},
+  author = {{Microsoft Corporation}},
+  year   = {2024},
+  url    = {https://www.typescriptlang.org/},
+  note   = {Acessado em: 26 nov. 2025}
 }
