--- a/TEXTO/atividades-parte-b.tex
+++ b/TEXTO/atividades-parte-b.tex
@@ -19,7 +19,8 @@ A Figura \ref{fig:comunicacao_jsi} ilustra o processo de criação de um compone
     \caption{Comunicação JSI entre React-native e Nativo.}
     \label{fig:com_async}
     \includegraphics[width=\textwidth]{IMAGENS/comunicao-async-rn.png} % Placeholder para a imagem
-    \source{Fonte: Do próprio autor.}
+    \vspace{0.3em}
+    \noindent{\small Fonte: Do próprio autor.}
 \end{figure}
 
 \subsection{Desenvolvimento}
@@ -337,7 +338,8 @@ O módulo nativo, empacotado originalmente com o react-native-builder-bob, torno
     Jest & \textasciicircum29.2.1 & \textasciicircum29.6.3 \\ \hline
     Prettier & \textasciicircum2.4.1 & 2.8.8 \\ \hline
     \end{tabular}
-    \source{Fonte: Do próprio autor.}
+    \vspace{0.3em}
+    \noindent{\small Fonte: Do próprio autor.}
 \end{table}
 
 Houve também a adição de novas dependências de desenvolvimento, como:
@@ -362,7 +364,8 @@ O upgrade passou por versões que introduziram mudanças significativas:
     0.73 & Inclui um processo atualizado para o Manifesto de Privacidade do iOS, agora obrigatório pela Apple. \\ \hline
     0.72 & Inclui uma nova configuração do Metro e um processo atualizado para o Manifesto de Privacidade do iOS. \\ \hline
     \end{tabular}
-    \source{Fonte: Do próprio autor.}
+    \vspace{0.3em}
+    \noindent{\small Fonte: Do próprio autor.}
 \end{table}
 
 \subsubsection{Alterações nos Arquivos de Configuração}
