--- a/TEXTO/TEXTO-Principal.tex
+++ b/TEXTO/TEXTO-Principal.tex
@@ -91,7 +91,15 @@
 %\newcommand{\obsa}[1]{}
 
 % Redefine fonte command for left-aligned sources with spacing
-\renewcommand{\fonte}[1]{\legend{{\small\raggedright\vspace{0.3em}Fonte: #1}}}
+\makeatletter
+\renewcommand{\fonte}[1]{%
+  \par\vspace{0.3em}%
+  \begin{flushleft}%
+    {\small Fonte: #1}%
+  \end{flushleft}%
+}
+\makeatother
+
 
       
 
@@ -202,16 +210,16 @@ As bases técnicas que nortearam a execução das atividades foram a adoção de
 É a fonte única da verdade que agrupa todos os elementos que permitem às equipes projetar e desenvolver um produto de forma coesa e escalável \cite{designsystem}.
 
 \subsection{O Pulso, Design System da RD Saúde}
-O "Pulso" materializa este conceito ao prover Tokens de Design (cores, tipografia), uma biblioteca de Componentes reutilizáveis e Documentação Técnica. Seu objetivo é "proporcionar uma base sólida para que designers e desenvolvedores possam criar produtos e experiências com qualidade, coesão e alinhamento", garantindo consistência e produtividade.
+O "Pulso" materializa o conceito de Design System ao prover Tokens de Design (cores, tipografia), uma biblioteca de Componentes reutilizáveis e Documentação Técnica. Seu objetivo é "proporcionar uma base sólida para que designers e desenvolvedores possam criar produtos e experiências com qualidade, coesão e alinhamento", garantindo consistência e produtividade.
 
 \section{Node.js (Ambiente de Execução Back-end)}
-É um ambiente de execução (runtime) de JavaScript assíncrono, construído sobre o motor V8 do Google Chrome. Ele permite a execução de código JavaScript no lado do servidor.
+É um ambiente de execução (runtime) de JavaScript assíncrono, construído sobre o motor V8 do Google Chrome. Ele permite a execução de código JavaScript no lado do servidor \cite{nodejs}.
 
 \subsection{Estrutura e Funcionamento}
 Seu principal diferencial é o modelo de I/O (Entrada/Saída) não bloqueante, orientado a eventos. Através do Event Loop, o Node.js consegue lidar com um grande número de conexões simultâneas de forma eficiente, delegando operações demoradas (como consultas a banco de dados ou chamadas de API) e executando outras tarefas enquanto aguarda a resposta. Isso o torna ideal para a construção de microsserviços e APIs de alta performance.
 
 \section{Next.js (Framework Web Front-end)}
-É um framework React para a construção de aplicações web de produção. Ele estende o React com uma estrutura robusta para renderização, roteamento e otimizações de performance.
+É um framework React para a construção de aplicações web de produção. Ele estende o React com uma estrutura robusta para renderização, roteamento e otimizações de performance \cite{nextjs}.
 
 \subsection{Estrutura e Funcionamento}
 Next.js é conhecido por seu sistema de roteamento baseado em arquivos e suas múltiplas estratégias de renderização: SSR (Server-Side Rendering), que gera o HTML da página no servidor a cada requisição, ideal para SEO e conteúdo dinâmico; e SSG (Static Site Generation), que gera o HTML em tempo de compilação (build), oferecendo performance máxima para páginas estáticas.
@@ -256,7 +264,7 @@ São um subconjunto dos Web Vitals que o Google considera essenciais para todas 
 \end{description}
 
 \section{React}
-É uma biblioteca JavaScript de código aberto, mantida pelo Facebook, para a construção de interfaces de usuário (UI). Seu principal paradigma é a criação de UIs de forma declarativa e baseada em componentes. Em vez de dizer ao navegador como manipular o DOM, o desenvolvedor declara como a UI deve se parecer em diferentes estados, e o React se encarrega de atualizar o DOM de forma eficiente através de um mecanismo chamado Virtual DOM.
+É uma biblioteca JavaScript de código aberto, mantida pelo Facebook, para a construção de interfaces de usuário (UI). Seu principal paradigma é a criação de UIs de forma declarativa e baseada em componentes. Em vez de dizer ao navegador como manipular o DOM, o desenvolvedor declara como a UI deve se parecer em diferentes estados, e o React se encarrega de atualizar o DOM de forma eficiente através de um mecanismo chamado Virtual DOM \cite{react}.
 
 \subsection{Conceitos Fundamentais do React}
 \begin{itemize}
@@ -298,7 +306,7 @@ O gerenciador de pacotes oficial e integrado ao Xcode é o Swift Package Manager
 A distribuição é feita exclusivamente pela Apple App Store, que possui um rigoroso processo de revisão para garantir a qualidade e a segurança dos aplicativos.
 
 \section{Ecossistema React Native (Multiplataforma)}
-É um framework para desenvolver aplicações móveis para Android e iOS usando uma única base de código em JavaScript e React. React Native envolve não apenas a criação de interfaces em JavaScript, mas também a capacidade de escrever módulos nativos (Java/Kotlin ou Swift/Objective-C) quando necessário para otimizar performance ou acessar APIs específicas do sistema operacional.
+É um framework para desenvolver aplicações móveis para Android e iOS usando uma única base de código em JavaScript e React \cite{reactnative}. React Native envolve não apenas a criação de interfaces em JavaScript, mas também a capacidade de escrever módulos nativos (Java/Kotlin ou Swift/Objective-C) quando necessário para otimizar performance ou acessar APIs específicas do sistema operacional.
 
 \subsection{Arquitetura legada do react-native: Bridge}
 Na arquitetura tradicional, a comunicação entre a thread JavaScript e a thread do Nativo (UI/Main) é feita através de uma Bridge serializável e assíncrona baseada em JSON.
@@ -336,7 +344,8 @@ A partir da versão 0.68, o React Native iniciou a transição de sua arquitetur
         Tipagem & Implícita (dependente de JSON) & Tipagem Forte (via TypeScript Spec) & Reduz erros de runtime e melhora a manutenção. \\ \hline
     \end{tabular}
     \label{tab:vantagens_nova_arquitetura}
-    \source{Fonte: Do próprio autor}
+    \vspace{0.3em}
+    \noindent{\small Fonte: Do próprio autor}
 \end{table}
 
 \subsection{Ecossistema Nativos em Atualizações de SDKs}
